# shaq

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
shaq/: __main__.py  _cli.py
